# aill

./: .gitignore  README.md  main.py  model.py  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  config.py  temp.csv
app/api/: __init__.py  config.py  routes.py  utils.py
app/core/: __init__.py  application.py  config.py
app/core/ml_models/: __init__.py  model.py
app/front/: simple.py
